// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookmarkList render the BookmarkList should render empty 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="dialog"
  >
    <div
      class="modal-backdrop fade in"
    />
    <div
      class="Modal-nuree8-0 cHlGak fade in modal"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="modal-dialog"
      >
        <div
          class="modal-content"
          role="document"
        >
          <div
            class="modal-body"
          >
            <div
              class="search"
              style="margin-top: 15px;"
            >
              <form
                class="form-inline"
              >
                <div
                  class="form-group has-feedback"
                >
                  <input
                    autocomplete="off"
                    class="query form-control"
                    id="common-search-form-query-input"
                    placeholder="Enter search query..."
                    spellcheck="false"
                    style="width: auto;"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="form-group"
                  style="margin-left: 5px;"
                >
                  <button
                    class="submit-button Button-c9cbmb-0 iKWoaE btn btn-default"
                    type="submit"
                  >
                    Search
                  </button>
                </div>
                <div
                  class="form-group"
                  style="margin-left: 5px;"
                >
                  <button
                    class="reset-button Button-c9cbmb-0 iKWoaE btn btn-default"
                    type="reset"
                  >
                    Reset
                  </button>
                </div>
              </form>
            </div>
            <div
              class="form-inline page-size"
              style="float: right;"
            >
              <div
                class="FormGroup__StyledFormGroup-sc-1wv4cm9-0 ekazNr form-group"
              >
                <label
                  class="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
                  for="page-size"
                >
                  Show:
                </label>
                <span>
                  <select
                    class="FormControl-sc-1amoaox-0 iHrYrm form-control input-sm"
                    id="page-size"
                    label="Show:"
                    name="page-size"
                    placeholder=""
                    type="select"
                  >
                    <option
                      value="5"
                    >
                      5
                    </option>
                    <option
                      value="10"
                    >
                      10
                    </option>
                    <option
                      value="15"
                    >
                      15
                    </option>
                  </select>
                  
                </span>
              </div>
            </div>
            <span>
              No bookmarks found
            </span>
            <div
              class="text-center"
            >
              <ul
                class="Pagination-sc-1u3exqe-0 gSmbxW pagination pagination-sm"
              >
                <li
                  class="disabled"
                >
                  <a
                    href="#"
                    role="button"
                    style="pointer-events: none;"
                    tabindex="-1"
                  >
                    <span
                      aria-label="First"
                    >
                      «
                    </span>
                  </a>
                </li>
                <li
                  class="disabled"
                >
                  <a
                    href="#"
                    role="button"
                    style="pointer-events: none;"
                    tabindex="-1"
                  >
                    <span
                      aria-label="Previous"
                    >
                      ‹
                    </span>
                  </a>
                </li>
                <li
                  class="disabled"
                >
                  <a
                    href="#"
                    role="button"
                    style="pointer-events: none;"
                    tabindex="-1"
                  >
                    <span
                      aria-label="Next"
                    >
                      ›
                    </span>
                  </a>
                </li>
                <li
                  class="disabled"
                >
                  <a
                    href="#"
                    role="button"
                    style="pointer-events: none;"
                    tabindex="-1"
                  >
                    <span
                      aria-label="Last"
                    >
                      »
                    </span>
                  </a>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="modal-footer"
          >
            <button
              class="Button-c9cbmb-0 ghlLDE btn btn-primary"
              disabled=""
              type="button"
            >
              Load
            </button>
            <button
              class="Button-c9cbmb-0 iKWoaE btn btn-default"
              disabled=""
              type="button"
            >
              Delete
            </button>
            <button
              class="Button-c9cbmb-0 iKWoaE btn btn-default"
              type="button"
            >
              Cancel
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`BookmarkList render the BookmarkList should render with views 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="dialog"
  >
    <div
      class="modal-backdrop fade in"
    />
    <div
      class="Modal-nuree8-0 cHlGak fade in modal"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="modal-dialog"
      >
        <div
          class="modal-content"
          role="document"
        >
          <div
            class="modal-body"
          >
            <div
              class="search"
              style="margin-top: 15px;"
            >
              <form
                class="form-inline"
              >
                <div
                  class="form-group has-feedback"
                >
                  <input
                    autocomplete="off"
                    class="query form-control"
                    id="common-search-form-query-input"
                    placeholder="Enter search query..."
                    spellcheck="false"
                    style="width: auto;"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="form-group"
                  style="margin-left: 5px;"
                >
                  <button
                    class="submit-button Button-c9cbmb-0 iKWoaE btn btn-default"
                    type="submit"
                  >
                    Search
                  </button>
                </div>
                <div
                  class="form-group"
                  style="margin-left: 5px;"
                >
                  <button
                    class="reset-button Button-c9cbmb-0 iKWoaE btn btn-default"
                    type="reset"
                  >
                    Reset
                  </button>
                </div>
              </form>
            </div>
            <div
              class="form-inline page-size"
              style="float: right;"
            >
              <div
                class="FormGroup__StyledFormGroup-sc-1wv4cm9-0 ekazNr form-group"
              >
                <label
                  class="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
                  for="page-size"
                >
                  Show:
                </label>
                <span>
                  <select
                    class="FormControl-sc-1amoaox-0 iHrYrm form-control input-sm"
                    id="page-size"
                    label="Show:"
                    name="page-size"
                    placeholder=""
                    type="select"
                  >
                    <option
                      value="5"
                    >
                      5
                    </option>
                    <option
                      value="10"
                    >
                      10
                    </option>
                    <option
                      value="15"
                    >
                      15
                    </option>
                  </select>
                  
                </span>
              </div>
            </div>
            <div
              class="list-group"
            >
              <button
                class="ListGroupItem__StyledListGroupItem-sc-1ky0joo-0 dvkPPN list-group-item"
                type="button"
              >
                test-0
              </button>
            </div>
            <div
              class="text-center"
            >
              <ul
                class="Pagination-sc-1u3exqe-0 gSmbxW pagination pagination-sm"
              >
                <li
                  class="disabled"
                >
                  <a
                    href="#"
                    role="button"
                    style="pointer-events: none;"
                    tabindex="-1"
                  >
                    <span
                      aria-label="First"
                    >
                      «
                    </span>
                  </a>
                </li>
                <li
                  class="disabled"
                >
                  <a
                    href="#"
                    role="button"
                    style="pointer-events: none;"
                    tabindex="-1"
                  >
                    <span
                      aria-label="Previous"
                    >
                      ‹
                    </span>
                  </a>
                </li>
                <li
                  class="active"
                >
                  <a
                    href="#"
                    role="button"
                  >
                    1
                  </a>
                </li>
                <li
                  class="disabled"
                >
                  <a
                    href="#"
                    role="button"
                    style="pointer-events: none;"
                    tabindex="-1"
                  >
                    <span
                      aria-label="Next"
                    >
                      ›
                    </span>
                  </a>
                </li>
                <li
                  class="disabled"
                >
                  <a
                    href="#"
                    role="button"
                    style="pointer-events: none;"
                    tabindex="-1"
                  >
                    <span
                      aria-label="Last"
                    >
                      »
                    </span>
                  </a>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="modal-footer"
          >
            <button
              class="Button-c9cbmb-0 ghlLDE btn btn-primary"
              disabled=""
              type="button"
            >
              Load
            </button>
            <button
              class="Button-c9cbmb-0 iKWoaE btn btn-default"
              disabled=""
              type="button"
            >
              Delete
            </button>
            <button
              class="Button-c9cbmb-0 iKWoaE btn btn-default"
              type="button"
            >
              Cancel
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
